Delete and Move Layers now working. The changes are respected by the layer list. The canvas layers do not respect the z-index until a refresh. There may still be some issues with some tools.

--- a/frontend/style/room.css
+++ b/frontend/style/room.css
@@ -12,14 +12,11 @@ body {
   visibility: hidden;
 }
 
-.canvas_layer.noEvent {
-  pointer-events: none;
-}
-
 #designer_layers {
   position: relative;
   height: 500px; 
   width: 800px;
+  border: solid black 1px;
 }
 
 #layer_panel_list {
